--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
         @import url(https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&family=Open+Sans:wght@400;500;600&family=Pacifico&display=swap);
         @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css);
         @import url(https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css);
+
         :where([class^="ri-"])::before {
             content: "\f3c2";
         }
@@ -8,6 +9,22 @@
         body {
             font-family: 'Open Sans', sans-serif;
         }
+
+        a:hover {
+            text-decoration: underline;
+            color: rgb(71, 71, 252);
+            
+        }
+        button:hover {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    transition: all 0.2s ease;
+    transform: scale(1.1); /* Adjust the scale factor as needed */
+    cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
 
         h1,
         h2,
@@ -102,7 +119,10 @@
         }
 
         .custom-range {
+            appearance: none;
             -webkit-appearance: none;
+            -moz-appearance: none;
+
             width: 100%;
             height: 6px;
             border-radius: 5px;
